# starlette-htmx

./: .editorconfig  .gitignore  .prospector.yaml  .pylintrc  README.md  main.py  mypy.ini  pyproject.toml  requirements.txt
templates/: _listings.html  base.html  index.html
templates/partials/: schedule.html
