[tool.poetry]
name = "htmx"
version = "0.1.0"
description = ""
authors = ["Paul Burt <peeb@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Babel = "^2.10.1"
httpx = "^0.22.0"
Jinja2 = "^3.1.1"
jinja-partials = "^0.1.1"
pydantic = "^1.9.0"
starlette = "^0.19.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}

[tool.poetry.dev-dependencies]
bandit = "^1.7.4"
mypy = "^0.942"
prospector = "^1.7.7"
pylint-pydantic = "^0.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
